2011-11-08  Takashi Kato  <ktakashi@ymail.com>

	* ext/zlib/rfc/zlib.scm (rfc zlib): (rfc zlib) library has been added.

	* src/null.stub (get-bytevector-n!): fixed invalid range check.

	* doc/rnrs/io/ports.scrbl: fixed reversed order argument list in
	call-with-port.

	* src/port.c (custom_close): fixed not calling close procedure of
	custom port when the port was closed.

2011-11-03  Takashi Kato  <ktakashi@ymail.com>

	* lib/compat/r7rs.scm (compat r7rs): added R7RS compatibility library.
	currently, only syntax-rules.

	* sitelib/match.scm (match): fixed unbound variable match:error

	* boot/lib/match_core.scm (match): fixed unbound variable 'faile-sym.

2011-11-01  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (global-eq?): fixed finding target library.

	* sitelib/sagittarius/control.scm (define-with-key): fixed non-hygine
	macro to hygine.

2011-10-28  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (let*-values): fixed wrong reference of compile time
	environment. let*-values init form could refer formals.

	* src/null.stub (delete-file): it did not raise error when deleting file
	was failed. it's been fixed.

2011-10-27  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/util/hashtables.scm (util hashtables): added hashtable utils.

	* sitelib/scribble.scm (scribble): adapt scribble reader to bytevector.

2011-10-26  Takashi Kato  <ktakashi@ymail.com>

	* src/library.c (rename_key): fixed rename import restriction.

2011-10-21  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/util/list.scm: separated from (rfc http).

	* test/tests/text/sxml/ssax.scm (ssax): ssax test case has been added.

	* src/load.c (load): if target loading file had hash-bang, load did not
	restore the previous mode. it's been fixed.

	* src/library.c (import): rename import did not work. it's been fixed.

2011-10-20  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm: fixed miscompiling when builtin test instruction had
	let clause.
