@@ -69,7 +69,12 @@ ADD_LIBRARY(sagittarius SHARED
 INCLUDE_DIRECTORIES(${SAGITTARIUS_INCLUDE_DIR})
 
 IF(${LINK_BOEHM_GC})
-  TARGET_LINK_LIBRARIES(sagittarius gc)
+  IF (TARGET ${GC_DEPENDS_TARGET})
+    MESSAGE(STATUS "Adding stupid gc related target: ${GC_DEPENDS_TARGET}")
+    TARGET_LINK_LIBRARIES(sagittarius ${GC_DEPENDS_TARGET})
+  ELSE()
+    TARGET_LINK_LIBRARIES(sagittarius gc)
+  ENDIF()
 ELSE()
   TARGET_LINK_LIBRARIES(sagittarius taurus)
 ENDIF()
@@ -89,7 +94,12 @@ IF(${LINK_BOEHM_GC})
   IF(MSVC)
     ADD_DEFINITIONS(-DGC_NOT_DLL)
   ENDIF()
-  TARGET_LINK_LIBRARIES(sash gc)
+  IF (TARGET ${GC_DEPENDS_TARGET})
+    MESSAGE(STATUS "Adding stupid gc related target: ${GC_DEPENDS_TARGET}")
+    TARGET_LINK_LIBRARIES(sash ${GC_DEPENDS_TARGET})
+  ELSE()
+    TARGET_LINK_LIBRARIES(sash gc)
+  ENDIF()
 ELSE()
   TARGET_LINK_LIBRARIES(sash taurus)
 ENDIF()
